# listView_practice

./: Background.qml  Box.qml  CMakeLists.txt  Delegate.qml  Reapeaterqml.qml  main.cpp  main.qml
